<resources>
    <string name="app_name">ReactionTime_v1</string>
    <string name="title">Measuring Reaction Time</string>
    <string name="get_started">Get started</string>
    <string name="instruction">Instruction: click on the red dots as fast as you can.</string>
    <string name="standard_deviation_ms">Standard deviation [ms]:</string>
    <string name="mean_ms">Mean [ms]:</string>
    <string name="results">Results</string>
    <string name="list_of_times_ms">List of times [ms]:</string>
    <string name="values">Values</string>
    <string name="description_for_barChart">Set Bar Chart Description Here</string>
    <string name="line_chart">Line Chart</string>
    <string name="bar_chart">Bar Chart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="all_users">All Users</string>
    <string name="edit_user">Edit user</string>
</resources>
