<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_user_fragment"
    tools:context=".AddUserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultsActivity">


        <TextView
            android:id="@+id/listTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="61dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/list_of_times_ms"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listOfTimes2"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/Red"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/listTitle2"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mean2"
        android:text="@string/mean_ms"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/listOfTimes2"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mean_res2"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/Red"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/mean2"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/std2"
        android:text="@string/standard_deviation_ms"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/mean_res2"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/std_res2"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/Red"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/std2"
        android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_name"
            android:hint="Name"
            android:layout_below="@id/std_res2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textAlignment="center"/>

    <Button
        android:id="@+id/buton_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar_chart"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/Red"
        android:textColor="@color/Black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:textStyle="bold"
        />
    </RelativeLayout>





</FrameLayout>